Fix overflow issue on mobile

--- a/main.scss
+++ b/main.scss
@@ -282,7 +282,6 @@ nav {
 #hero {
 	@include grid-center();
 	margin: 0 auto;
-	width: 100%;
 	min-height: 100vh;
 	padding: 1%;
 
